Solution | Example 20 | Section Functional Programming and Lambda Expressions